--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ p,h1,h2,h3,h4{
 
 .frs-caption-content > div,
 .frs-caption-content > h4{
- text-shadow: 0px 0px 12px rgba(109, 109, 109, 1);
+ text-shadow: 0 0 12px rgba(109, 109, 109, 1);
 }
 
 ul.menu li.current-menu-item > a{
@@ -152,7 +152,7 @@ li p{
 }
 
 
-ul.products a{
+ul.products li.product a{
  display: block;
 
 }
@@ -167,7 +167,7 @@ ul.products li img{
 
 
 
-ul.products a h3 mark.count{
+ul.products li.product a h3 mark.count{
  display: none;
 }
 
@@ -183,6 +183,24 @@ ul.products li a.button{
  display: none!important;
 }
 
+ul.products li.product a h3{
+ font-size: 22px;
+ color:white;
+ position: absolute;
+ top: 45%;
+ left: 0;
+ right: 0;
+ margin: auto!important;
+ /* display: table-cell;*/
+ vertical-align:middle;
+ z-index: 20;
+ text-shadow: 0 0 30px rgba(25, 25, 25, 1);
+
+ padding-left: 10%;padding-right:10%;
+ /* border-top: 0.5px solid rgba(255,255,255,0.5);
+  border-bottom: 0.5px solid rgba(255,255,255,0.5);*/
+}
+
 @media screen and (max-width: 65.141em){
  ul.products li.product.last.product-category
  {
@@ -194,23 +212,39 @@ ul.products li a.button{
  }
 }
 
+@media screen and (max-width:836px){
+ ul.products li.product a h3{
+  font-size: 18px;
+  line-height: 28px;
+ }
+
+}
 
 @media screen and (max-width: 768px) {
- ul.products li {
+ ul.products li.product {
   width: 45%;
  }
- ul.products a h3{
-  font-size: 1.2em!important;
-  top:30%;
+ ul.products li.product a h3{
+
+  top:45%;
+ }
+}
+
+@media screen and (max-width: 470px){
+ ul.products li.product a h3{
+  font-size: 16px;
+  line-height: 20px;
+  top: 40%;
+
  }
 }
 
 @media screen and (max-width: 320px){
- ul.products li{
+ ul.products li.product{
   width: 100%;
  }
- ul.products a h3{
-  font-size: 1.2em!important;
+ ul.products li.product a h3{
+  font-size: 1.2em;
   top:45%;
  }
 
@@ -236,7 +270,7 @@ ul.products li .hover-overlay a:hover{
  background-color: rgba(0,0,0,0.7);
 }
 
-ul.products a{
+ul.products li.product a{
  text-align: center!important;
 }
 
@@ -244,39 +278,11 @@ span.onsale {
  display: none;
 }
 
-ul.products a h3{
- font-size: 1.6em!important;
- color:white;
- position: absolute;
- top: 45%;
- left: 0;
- right: 0;
- margin: auto!important;
- /* display: table-cell;*/
- vertical-align:middle;
- z-index: 20;
- text-shadow: 0px 0px 30px rgba(25, 25, 25, 1);
 
- padding-left: 10%;padding-right:10%;
- /* border-top: 0.5px solid rgba(255,255,255,0.5);
-  border-bottom: 0.5px solid rgba(255,255,255,0.5);*/
-}
 
-@media screen and (max-width:836px){
- ul.products a h3{
-  font-size: 18px;
-  line-height: 28px;
- }
 
-}
 
-@media screen and (max-width:836px){
- ul.products a h3{
-  font-size: 15px;
-  top:35%;
- }
 
-}
 
 
 /* ==============
@@ -286,7 +292,7 @@ Product
 .single-product div.product form.cart{
  border-top: none!important;
  border-bottom: none!important;
- padding: 1em 0px!important;
+ padding: 1em 0!important;
 }
 
 div.product .summary{
@@ -574,7 +580,7 @@ body.page-template-template-fullwidth-php div.headerwrapper h1{
  color: white;
  font-size:60px;
  font-weight: 700;
- text-shadow: 0 1px 1.86px rgba(0, 0, 0, 0.5);
+ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -582,7 +588,7 @@ body.page-template-template-fullwidth-php div.headerwrapper h1{
 
 .myfixed {
  float:none!important;
- border:0px!important;
+ border:0!important;
  background-color: rgba(0,0,0,0.8)!important;
  max-width:100%!important;
  position: fixed!important;
@@ -647,9 +653,9 @@ body.page-template-template-fullwidth-php div.headerwrapper h1{
  z-index: 2000;
  background-color: white;
  padding:30px 100px;
- -webkit-box-shadow: 0px 2px 4px 1px rgba(0,0,0,0.5);
- -moz-box-shadow: 0px 2px 4px 1px rgba(0,0,0,0.5);
- box-shadow: 0px 2px 4px 1px rgba(0,0,0,0.5);
+ -webkit-box-shadow: 0 2px 4px 1px rgba(0,0,0,0.5);
+ -moz-box-shadow: 0 2px 4px 1px rgba(0,0,0,0.5);
+ box-shadow: 0 2px 4px 1px rgba(0,0,0,0.5);
 }
 
 .page-template-template-fullwidth-shift-upwards-php .myfixed{
@@ -778,6 +784,5 @@ div.jo-so-banner-33 div.textwidget h3+p{
 .panel-grid-cell .textwidget p:first-child{
  position: relative;
 }*/
-
 
 
