--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:       Jinyan Yu
  Author URI:   http://example.com
  Template:     storefront
- Version:      0.6.5
+ Version:      0.6.6
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
@@ -285,6 +285,16 @@ span.onsale {
 /* ==============
 Product
 =================*/
+
+/*隐藏“基本信息”和“产品描述”标题*/
+.product h2:first-of-type {
+ display: none;
+}
+
+.product h2:nth-of-type(2) {
+ display: none;
+}
+
 
 .single-product div.product form.cart{
  border-top: none!important;
