--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:       Jinyan Yu
  Author URI:   http://example.com
  Template:     storefront
- Version:      0.6.8
+ Version:      0.6.9
  License:      GNU General Public License v2 or later
  License URI:  http://www.gnu.org/licenses/gpl-2.0.html
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
@@ -653,9 +653,12 @@ div.headerwrapper h1{
  padding-top: 30px;
 }
 
+/*TODO*/
+/*
 .home .main-navigation{
  margin-top: 30px;
 }
+*/
 
 .myfixed .main-navigation{
  padding-top:4.5em;
@@ -668,29 +671,67 @@ div.headerwrapper h1{
 
 /* Fluid Responsive Header */
 
-span.frs-arrow-right{  /*eliminate duplicate arrows */
+span.frs-arrow-right,
+span.frs-arrow-left{  /*eliminate duplicate arrows */
  font-size: 0!important;
 }
 
-span.frs-arrow-left{
- font-size: 0!important;
+p.frs-caption-button.frs-buttonskin-white a span { /*button size*/
+ font-size: 20px;
 }
 
-@media screen and (max-width:1300px){ /* media queries */
+/*@media screen and (max-width:1300px){
  #home-header-slidepjc-slideshow .frs-caption-content h4{
- font-size: 40px!important;
+ font-size: 40px;
  }
  #home-header-slidepjc.frs-slideshow-container .slider-description{
   margin-top: 1em!important;
   width: 60%!important;
   font-size: 18px!important;
  }
+}*/
+
+@media screen and (max-width:968px){
+ #home-header-slidepjc-slideshow .frs-caption h4{
+  font-size: 45px!important;
+ }
+ #home-header-slidepjc-slideshow .frs-caption h4 + div,
+ #home-header-slidepjc-slideshow .frs-caption h4 + div p {
+  font-size: 20px!important;
+ }
 }
 
-@media screen and (max-width:1024px){
- #home-header-slidepjc.frs-slideshow-container .slider-description{
+@media screen and (max-width:768px){
+ #home-header-slidepjc-slideshow .frs-caption h4{
+  font-size: 30px!important;
+ }
+ #home-header-slidepjc-slideshow .frs-caption h4 + div,
+ #home-header-slidepjc-slideshow .frs-caption h4 + div p {
+  font-size: 20px!important;
+ }
+}
+
+@media screen and (max-width:500px){
+ #home-header-slidepjc-slideshow .frs-caption h4{
+  font-size: 30px!important;
+  font-weight: 700!important; /*overwrite plugin default*/
+  line-height: 1.3!important;
+ }
+ #home-header-slidepjc-slideshow .frs-caption h4 + div,
+ #home-header-slidepjc-slideshow .frs-caption h4 + div {
+/*  font-size: 16px!important;
+  line-height: 1.2!important;*/
   display: none;
  }
+ p.frs-caption-button.frs-buttonskin-white a span { /*button size*/
+  font-size: 16px;
+ }
+
+ p.frs-caption-button.frs-buttonskin-white {
+  padding-top: 5px!important;
+ }
+
+
 }
 
 /* siteorigin banner */
