解决移动端标题过大

--- a/feature-product.css
+++ b/feature-product.css
@@ -220,8 +220,9 @@
 
 #fp-wrapper .schedule-list-text {
     position: absolute;
-    top:-100px;
+    top:-6em;
     font-weight: 700;
+    line-height: 1.2;
 }
 
 #fp-wrapper #jopal-bg {
