--- a/style.css
+++ b/style.css
@@ -615,6 +615,18 @@ div.headerwrapper h1{
  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
 }
 
+@media screen and (max-width: 960px) {
+ div.headerwrapper h1 {
+  font-size:48px;
+ }
+}
+
+@media screen and (max-width: 480px) {
+ div.headerwrapper h1 {
+  font-size:32px;
+ }
+}
+
 
 /* mystickynav */
 
