--- a/feature-product.css
+++ b/feature-product.css
@@ -1,36 +1,27 @@
-#fp-wrapper {
-
+.product {
     margin-top:20px;
     font-size: 16px;
 }
 
-@media screen and (max-width: 475px){
-    #fp-wrapper {
-        font-size: 12px;
-        margin-top: 0;
-    }
-}
-
-
-#fp-wrapper ul{
+.product ul{
     padding-left: 0;
     list-style-type: none;
     margin-left: 0;
     margin-right: 0;
-
 }
 
-#fp-wrapper .b-margin {
+.product .b-margin {
     margin-bottom: 40px;
 }
 
-#fp-wrapper .plain-text {
+.product .plain-text {
     line-height: 2;
     padding: 0 2em;
     
 }
 
-#fp-wrapper #intro {
+.product [itemprop='description'],
+.product #intro {
     height: 266px;
     display: flex;
     flex-direction: column;
@@ -40,14 +31,12 @@
     padding: 0 5%
 }
 
-#fp-wrapper #card {
+.product #card {
     height: 59.375em;
     background-color: black;
 }
 
-
-
-#fp-wrapper #card-icon-set {
+.product #card-icon-set {
     height: 200px;
     width: 100%;
     margin: 0;
@@ -56,31 +45,22 @@
     margin-bottom: 1.25em;
 }
 
-#fp-wrapper .single-icon {
+.product .single-icon {
     display: inline-block;
     width:calc(100% / 3);
     height: 100px;
     text-align: center;
 }
 
-#fp-wrapper .single-icon img{
+.product .single-icon img{
     width: 5.5em;
 }
 
-@media screen and (max-width: 475px){
-    #fp-wrapper .single-icon img {
-        width: 4.5em;
-    }
-    #fp-wrapper .icon-text h3 {
-        font-size: 1.1em;
-    }
-}
-
-#fp-wrapper .icon-text {
+.product .icon-text {
     color: white;
 }
 
-#fp-wrapper .icon-text h3 {
+.product .icon-text h3 {
     margin: 10px auto;
     margin-bottom: 5px;
     border-bottom: solid white 2px;
@@ -90,31 +70,22 @@
     font-size:1.25em;
 }
 
-#fp-wrapper .icon-text p {
+.product .icon-text p {
     margin-top: 0;
 }
 
-#fp-wrapper .image {
+.product .image {
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-#fp-wrapper #card-image {
+.product #card-image {
     height: 37.5em;
     border-right: solid black 3.125em;
 }
 
-@media screen and (max-width: 400px) {
-    #fp-wrapper #card {
-        height: 50em;
-    }
 
-    #fp-wrapper #card-image {
-        height: 30em;
-    }
-}
-
-#fp-wrapper #card-title h1{
+.product #card-title h1{
 /*            background-color: white;*/
     margin-top: .8em;
     font-weight: 700;
@@ -124,39 +95,35 @@
     left: -20px;
 }
 
-@media screen and (max-width:475px) {
-    #fp-wrapper #card-title h1 {
-        display: none;
-    }
-}
 
-#fp-wrapper .section > h2 {
+
+.product .section > h2 {
     text-align: center;
     position: relative;
     margin: 1.25em auto;
 }
 
-#fp-wrapper .section > h2 p {
+.product .section > h2 p {
     display: inline-block;
     padding-bottom: 4px;
     border-bottom: solid 2px black;
     margin: 1em auto 1em auto;
 }
 
-#fp-wrapper .img-single {
+.product .img-single {
     height: 20em;
 }
 
 
-#fp-wrapper .schedule {
+.product .schedule {
     position: relative;
 }
 
-#fp-wrapper .schedule-wrapper {
+.product .schedule-wrapper {
     height: 25.625em;
 }
 
-#fp-wrapper .schedule-list-bg {
+.product .schedule-list-bg {
     position: relative;
     top: 30px;
     height: 23.75em;
@@ -164,12 +131,12 @@
     width: 85.7%;
 }
 
-#fp-wrapper .schedule-list-bg ul{
+.product .schedule-list-bg ul{
     font-size:.8em;
     line-height: 1.8;
 }
 
-#fp-wrapper .schedule-list-bg > div {
+.product .schedule-list-bg > div {
     position: relative;
     width   : 50%;
     height: 100%;
@@ -177,7 +144,7 @@
     padding-right: 5%;
 }
 
-#fp-wrapper .schedule-img {
+.product .schedule-img {
     right: 0;
     height: 23.75em;
     width: 57.1%;
@@ -185,7 +152,7 @@
     top: 0;
 }
 
-#fp-wrapper .schedule-list-bg-inner {
+.product .schedule-list-bg-inner {
     background-color: white;
     text-align: center;
     position: absolute;
@@ -194,7 +161,7 @@
     left: 10%
 }
 
-#fp-wrapper .small-title {
+.product .small-title {
     display: inline-block;
     background-color: black;
     color: white;
@@ -204,7 +171,7 @@
 
 }
 
-#fp-wrapper #jopal-name {
+.product #jopal-name {
     padding: 5px 20px;
     position: absolute;
     top: 0;
@@ -212,26 +179,26 @@
 
 }
 
-#fp-wrapper .schedule-list-title {
+.product .schedule-list-title {
     margin: 0;
     position: relative;
     top: -15px;
 }
 
-#fp-wrapper .schedule-list-text {
+.product .schedule-list-text {
     position: absolute;
     top:-6em;
     font-weight: 700;
     line-height: 1.2;
 }
 
-#fp-wrapper #jopal-bg {
+.product #jopal-bg {
     position: relative;
     height: 37.5em;
     padding: 0 5%;
 }
 
-#fp-wrapper #jopal-bg-inner {
+.product #jopal-bg-inner {
     position: absolute;
     background-color: white;
     padding: 5% 15%;
@@ -241,19 +208,19 @@
     text-align: center;
 }
 
-#fp-wrapper #jopal-title {
+.product #jopal-title {
     margin-top: 2em;
 }
 
-#fp-wrapper #jopal-bg-inner h3 {
+.product #jopal-bg-inner h3 {
     margin-top: 2em;
 }
 
-#fp-wrapper #jopal-bg-inner p {
+.product #jopal-bg-inner p {
     text-align: left;
 }
 
-#fp-wrapper #timetable table {
+.product #timetable table {
     text-align: center;
     margin-top: -20px;
     width: 100%;
@@ -263,27 +230,27 @@
     border-collapse: collapse;
 }
 
-#fp-wrapper #timetable tr,
-#fp-wrapper #timetable td {
+.product #timetable tr,
+.product #timetable td {
     text-align: center;
 }
 
-#fp-wrapper #timetable table td {
+.product #timetable table td {
     width: 14.29%;
     padding: 0;
 }
 
-#fp-wrapper #timetable p:first-of-type {
+.product #timetable p:first-of-type {
     margin-top: -25px;
     text-align: center;
 
 }
 
-#fp-wrapper #timetable table tr td {
+.product #timetable table tr td {
     vertical-align: middle;
 }
 
-#fp-wrapper #timetable table tr:first-of-type {
+.product #timetable table tr:first-of-type {
     color: black;
     background-color: white;
     height: 50px;
@@ -294,11 +261,53 @@
 
 /*hacks to solve style conflicts*/
 
-#fp-wrapper h2.feature-product-title {
+.product h2.feature-product-title {
     display: block!important;
     color: black;
 }
 
-#fp-wrapper #card-icon-set .single-icon img {
+.product #card-icon-set .single-icon img {
     display:inline;
+}
+
+/* media queries */
+@media screen and (max-width: 992px){
+    .product .single-icon img {
+        width: 4.2em;
+    }
+    .product #card {
+        height:46em;
+    }
+    .product #card-title {
+        display: none;
+    }
+    .product #card-image {
+        border: 5px black solid;
+    }
+}
+
+
+@media screen and (max-width: 475px){
+    .product {
+        font-size: 12px;
+        margin-top: 0;
+    }
+    .product .single-icon img {
+        width: 4.5em;
+    }
+    .product .icon-text h3 {
+        font-size: 1.1em;
+    }
+
+}
+
+@media screen and (max-width: 400px) {
+    .product #card {
+        height: 50em;
+    }
+
+
+    .product #card-image {
+        height: 30em;
+    }
 }
